# tree-sitter-magik

./: .editorconfig  .eslintrc.js  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  eslint.config.js  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml
bindings/c/: tree-sitter-magik.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_magik/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMagik/: magik.h
bindings/swift/TreeSitterMagikTests/: TreeSitterMagikTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignment.txt  block.txt  catch.txt  class.txt  comments.txt  expressions.txt  handling.txt  if.txt  invoke.txt  literals.txt  lock.txt  loop.txt  method_invocation.txt  methods.txt  package.txt  primitive.txt  procedure.txt  protect.txt  slot_accessor.txt  strings.txt  thisthread.txt  throw.txt  try.txt  tuple.txt  variable_declarations.txt  variables.txt
