[package]
name = "tree-sitter-magik"
description = "Magik grammar for tree-sitter"
version = "0.0.1"
authors = [
  "Robin Putters <robinputters@github.com>",
  "Sebastiaan Speck <sebastiaanspeck@github.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "magik"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/krn-robin/tree-sitter-magik"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.91"

[dev-dependencies]
tree-sitter = "0.25.2"
